--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
-        <title>Russian-travel</title>
+        <title>Путешествие по России</title>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./pages/index.css" />
-        <link rel="stylesheet" href="./vendor/normalize.css" />
     </head>
     <body class="page">
         <header class="header">
@@ -56,11 +55,11 @@
                 <img src="./images/baykal.png" alt="Замерзшее озеро" class="photo-grid__item" />
                 <img src="./images/plyazh.png" alt="Берег озера на фоне гор" class="photo-grid__item" />
                 <img src="./images/gory.png" alt="Горы" class="photo-grid__item" />
-                <img src="./images/dorozhnyi_znak.png" alt="" class="photo-grid__item" />
+                <img src="./images/dorozhnyi_znak.png" alt="Дорожный знак" class="photo-grid__item" />
                 <img src="./images/tuman_holmy.png" alt="Холмы окутанные туманом" class="photo-grid__item" />
                 <img src="./images/pole_gora.png" alt="Поле на фоне гор" class="photo-grid__item" />
                 <img src="./images/skala.png" alt="Скалы" class="photo-grid__item" />
-                <img src="./images/tuman.png" alt="" class="photo-grid__item" />
+                <img src="./images/tuman.png" alt="Туманный лес" class="photo-grid__item" />
             </section>
 
             <section class="placec">
@@ -157,7 +156,7 @@
             </section>
 
             <section class="cover">
-                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link-visible link">
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link-visible">
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
                 </a>
