--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p class="place__url-heading">url</p>
                         <a href="http://park-kosa.ru" class="place__link link">park-kosa</a>
                     </div>
-                    <img src="./images/kurskaya_kosa.png" alt="Куршская коса" class="place__image" />
+                    <img src="./images/kurskaya_kosa.png" alt="Куршская коса" class="place__img" />
 
                     <div class="place__paragraphs">
                         <p class="place__paragraph">
@@ -93,7 +93,7 @@
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link link">National Geographic</a>
                     </div>
 
-                    <img src="./images/kolsky.png" alt="Кольский" class="place__image" />
+                    <img src="./images/kolsky.png" alt="Кольский" class="place__img" />
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                         <p class="place__paragraph">
