--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body class="page">
         <header class="header">
             <a href="#" class="header__logo link">
-                <img src="./images/__logo.svg" alt="Логотип сайта" class="header__logo-image" />
+                <img src="./images/__logo.svg" alt="Логотип сайта" class="header__logo" />
             </a>
 
             <div class="header__container">
